# leptos_samples

./: .gitignore  .pre-commit-config.yaml  .releaserc  .tool-versions  Cargo.toml  LICENSE  Makefile  package-lock.json  package.json
.devcontainer/: Dockerfile  devcontainer.json
.github/: pull_request_template.md
.github/workflows/: build-site.yml  build.yml  pr_title_check.yml  pull_request.yml  quality_checks.yml  release.yml
draggable_boxes/: Cargo.toml  index.html  tailwind.config.js
draggable_boxes/src/: main.rs
